--- a/team-builder/src/App.css
+++ b/team-builder/src/App.css
@@ -39,8 +39,14 @@
 
 .cardDiv {
   margin: auto;
+  width: 25rem;
 }
 
 .card-body {
   margin: 1rem;
+}
+
+.formDiv {
+  margin: auto;
+  width: 25rem;
 }
